# C4

./: CMakeLists.txt
src/: AlpacaApi.cpp  AlpacaApi.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  TimeParser.cpp  TimeParser.h  TradingDataManager.cpp  TradingDataManager.h  main.cpp
tests/: CMakeLists.txt  test_alpaca_api.cpp
